<resources>
    <string name="app_name">Quotation</string>
    <string name="action_settings">Settings</string>
    <string name="genericlogo">genericLogo</string>
    <string name="made_with">&#160;&#160;&#160;Made with \uD83D\uDC9A \n by \n Divyanshu</string>
    <string name="email_id">divyanshuk10@gmail.com</string>
    <string name="contentDescNext">next</string>
    <string name="make_a_quotation">Make a quotation</string>
    <string name="make_a_invoice">Make an invoice</string>
    <string name="add_fields">Add Fields</string>
    <string name="ok">OK</string>
</resources>
